# crds

./: .gitignore  README.md  crds.yaml  go.mod  go.sum  main.go  main.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: publish.yaml  test.yaml  validate.yaml
internal/config/: config.go
internal/processor/: collections.go  crds.go  orphans.go  processor.go
schemas/acme.cert-manager.io/: challenge_v1.json  order_v1.json
schemas/argoproj.io/: application_v1alpha1.json  applicationset_v1alpha1.json  appproject_v1alpha1.json
schemas/cert-manager.io/: certificate_v1.json  certificaterequest_v1.json  clusterissuer_v1.json  issuer_v1.json
schemas/dragonflydb.io/: dragonfly_v1alpha1.json
schemas/experimental.gateway.networking.k8s.io/: gatewayclasses_v1.json  listenersets_v1.json  referencegrants_v1.json
schemas/extensions.istio.io/: trafficextension_v1alpha1.json  wasmplugin_v1alpha1.json
schemas/external-secrets.io/: clusterexternalsecret_v1.json  clusterexternalsecret_v1beta1.json  clusterpushsecret_v1alpha1.json  clustersecretstore_v1.json  clustersecretstore_v1beta1.json  externalsecret_v1.json  externalsecret_v1beta1.json  pushsecret_v1alpha1.json  secretstore_v1.json  secretstore_v1beta1.json
schemas/gateway.envoyproxy.io/: backend_v1alpha1.json  backendtrafficpolicy_v1alpha1.json  clienttrafficpolicy_v1alpha1.json  envoyextensionpolicy_v1alpha1.json  envoypatchpolicy_v1alpha1.json  envoyproxy_v1alpha1.json  httproutefilter_v1alpha1.json  securitypolicy_v1alpha1.json
src/: main.py  test_main.py
(+1120 files in other folders)
